--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,5 +18,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "react-router-dom": "^6.4.2"
-  }
+  },
+  "description": ""
 }
