--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.2.2",
     "jsonwebtoken": "^8.5.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-create-context": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
